alteração do grid

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
     <body>
         <div class="container">
-            <main>
+            <main class="row">
                 <h2>Escolha a opção:</h2>
                 <hr>
                 <div class="row" id="row_buttons">
-                    <div class="col-sm">
-                        <button type="button" class="btn btn-primary" onclick="saldo()">Consultar saldo</button>
+                    <div class="col-sm col-xs-12 mb-3">
+                        <button type="button" class="btn btn-primary btn-block" onclick="saldo()">Consultar saldo</button>
                     </div>
-                    <div class="col-sm">
-                        <button type="button" class="btn btn-primary" onclick="depositar()">Depositar</button>
+                    <div class="col-sm col-xs-12 mb-3">
+                        <button type="button" class="btn btn-primary btn-block" onclick="depositar()">Depositar</button>
                     </div>
-                    <div class="col-sm">
-                        <button type="button" class="btn btn-primary" onclick="sacar()">Sacar</button>
+                    <div class="col-sm col-xs-12 mb-3">
+                        <button type="button" class="btn btn-primary btn-block" onclick="sacar()">Sacar</button>
                     </div>
                 </div>
             </main>
