--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 <h2>Escolha a opção:</h2>
                 <hr>
                 <div class="row" id="row_buttons">
-                    <div class="col-sm col-xs-12 mb-3">
+                    <div class="col-sm-4 col-xs-12 mb-3">
                         <button type="button" class="btn btn-primary btn-block" onclick="saldo()">Consultar saldo</button>
                     </div>
-                    <div class="col-sm col-xs-12 mb-3">
+                    <div class="col-sm-4 col-xs-12 mb-3">
                         <button type="button" class="btn btn-primary btn-block" onclick="depositar()">Depositar</button>
                     </div>
-                    <div class="col-sm col-xs-12 mb-3">
+                    <div class="col-sm-4 col-xs-12 mb-3">
                         <button type="button" class="btn btn-primary btn-block" onclick="sacar()">Sacar</button>
                     </div>
                 </div>
